k8s/n8n/03-n8n-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:latest
          ports:
            - name: web
              containerPort: 5678
          volumeMounts:
            - name: nfs-storage
              mountPath: /home/node/.n8n
              subPath: n8n/data
            - name: nfs-storage
              mountPath: /files
              subPath: n8n/files
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: nfs-general-pvc
