k8s/n8n/01-n8n-service.yml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  selector:
    app: n8n
  ports:
    - name: web
      port: 80
      targetPort: 5678
